client/src/pages/home/chathome.css
.chat-home {
    height: 100svh;
    display: flex;
    background: #000;
}

.chatmenu {
    flex: 2;
    background: #292929;
    margin-right: 1px;
}

.chatbox {
    flex: 5;
    background:
        linear-gradient(rgba(18, 18, 18, 0.7), rgba(18, 18, 18, 0.7)), url('../../Assets/images/chatBackground.jpg');
    background-size: cover;
    background-position: center;
    filter: blur(0px);
    /* background: radial-gradient(circle at 50% 40%, #1e1e26 0%, #121214 100%); */
}

.modal-overlay {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.5);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000;
}

.modal {
    position: fixed !important;
    display: flex;
    inset: 0;
    max-width: none;
    margin: 0;
    padding: 1.8rem;
    user-select: none;
}

.loading-screen {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100svh;
    width: 100%;
    background: #292929;
    color: white;

    .loading-text {
        margin-top: 2rem;
        font-size: 1.5rem;
        font-weight: 500;
        letter-spacing: 0.5px;
        animation: pulse 1.5s ease-in-out infinite;
    }
}

@keyframes pulse {
    0% {
        opacity: 0.6;
    }
    50% {
        opacity: 1;
    }
    100% {
        opacity: 0.6;
    }
}

@media (max-width: 1024px) {
    .chatmenu {
        flex: 4;
    }

    .chatbox {
        flex: 6.5;
    }
}

@media (max-width: 768px) {
    .chatmenu {
        flex: 4;
    }

    .chatbox {
        flex: 5;
    }
}

@media (max-width: 600px) {
    .chatmenu {
        display: block;
    }

    .chatmenu.active {
        display: none;
    }

    .chatbox {
        display: none;
    }

    .chatbox.active {
        display: block;
    }
}

